@@ -37,21 +37,24 @@ import de.kreth.clubhelperbackend.config.SqlForDialect;
 import de.kreth.clubhelperbackend.dao.DeletedEntriesDao;
 import de.kreth.clubhelperbackend.pojo.Data;
 import de.kreth.clubhelperbackend.pojo.DeletedEntries;
+import de.kreth.clubhelperbackend.utils.TimeProvider;
 
 /**
  * Default implementation for database access with all common query methods.
  * 
  * @author markus
  *
- * @param <T>
- *            object type this dao is used for.
+ * @param <T> object type this dao is used for.
  */
-public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
-		implements
-			Dao<T> {
+public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport implements Dao<T> {
+
+	public static final String ID_COLUMN = "id";
+	public static final String DELETE_COLUMN = "deleted";
+	public static final String CREATED_COLUMN = "created";
+	public static final String CHANGED_COLUMN = "changed";
 
 	protected static final DatabaseConfiguration dbConfig = new DatabaseConfiguration(0);
-	
+
 	final String tableName;
 	private SqlForDialect sqlDialect;
 
@@ -63,7 +66,7 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 	private final String SQL_UPDATE;
 	private final String SQL_DELETE;
 	private final String SQL_INSERTWithId;
-	private final RowMapper<T> mapper;
+	private final ClubhelperRowMapper<T> mapper;
 	protected final Logger log;
 
 	private DeletedEntriesDao deletedEntriesDao;
@@ -71,12 +74,12 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 
 	final String SQL_INSERTWithoutId;
 	private final String[] columnNames;
+	protected TimeProvider timeProvider;
 
 	/**
 	 * Constructs this {@link Dao} implemetation.
 	 * 
-	 * @param config
-	 *            configuration for this dao.
+	 * @param config configuration for this dao.
 	 */
 	public AbstractDao(DaoConfig<T> config) {
 		super();
@@ -88,30 +91,24 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 		this.tableName = config.tableName;
 		this.columnNames = config.columnNames;
 
-		List<String> columnNames = new ArrayList<>(
-				Arrays.asList(config.columnNames));
+		List<String> localColumList = new ArrayList<>(Arrays.asList(config.columnNames));
 
-		columnNames.add("changed");
-		StringBuilder stringBuilder = new StringBuilder().append("update ")
-				.append(config.tableName).append(" set ")
-				.append(join(columnNames, "=?, ")).append("=? WHERE id=?");
+		localColumList.add(CHANGED_COLUMN);
+		StringBuilder stringBuilder = new StringBuilder().append("update ").append(config.tableName).append(" set ")
+				.append(join(localColumList, "=?, ")).append("=? WHERE id=?");
 		this.SQL_UPDATE = stringBuilder.toString();
 
-		columnNames.add("created");
-		SQL_INSERTWithoutId = "insert into " + config.tableName + " ("
-				+ join(columnNames, ", ") + ") values ("
+		localColumList.add(CREATED_COLUMN);
+		SQL_INSERTWithoutId = "insert into " + config.tableName + " (" + join(localColumList, ", ") + ") values ("
 				+ generateQuestionMarkList(config.columnNames.length + 2) + ")";
 
-		columnNames.add(0, "id");
-		this.SQL_INSERTWithId = "insert into " + config.tableName + " ("
-				+ join(columnNames, ", ") + ") values ("
+		localColumList.add(0, ID_COLUMN);
+		this.SQL_INSERTWithId = "insert into " + config.tableName + " (" + join(localColumList, ", ") + ") values ("
 				+ generateQuestionMarkList(config.columnNames.length + 3) + ")";
 
-		this.SQL_DELETE = "update " + config.tableName
-				+ " set deleted=? where id=?";
+		this.SQL_DELETE = "update " + config.tableName + " set deleted=? where id=?";
 
-		this.SQL_QUERY_ALL = "select * from " + config.tableName
-				+ " WHERE deleted is null";
+		this.SQL_QUERY_ALL = "select * from " + config.tableName + " WHERE deleted is null";
 
 		this.SQL_QUERY_ALL_WITHDELETED = "select * from " + config.tableName;
 
@@ -120,16 +117,13 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 
 		if (config.orderBy != null) {
 			this.SQL_QUERY_ALL += " ORDER BY " + join(config.orderBy, ", ");
-			this.SQL_QUERY_ALL_WITHDELETED += " ORDER BY "
-					+ join(config.orderBy, ", ");
+			this.SQL_QUERY_ALL_WITHDELETED += " ORDER BY " + join(config.orderBy, ", ");
 		}
 	}
 
 	@Autowired
-	public void setPlatformTransactionManager(
-			PlatformTransactionManager transMan) {
-		Assert.notNull(transMan,
-				"The 'transactionManager' argument must not be null.");
+	public void setPlatformTransactionManager(PlatformTransactionManager transMan) {
+		Assert.notNull(transMan, "The 'transactionManager' argument must not be null.");
 		this.transactionTemplate = new TransactionTemplate(transMan);
 	}
 
@@ -138,6 +132,16 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 		this.deletedEntriesDao = deletedEntriesDao;
 	}
 
+	@Autowired
+	public void setTimeProvider(TimeProvider timeProvider) {
+		this.timeProvider = timeProvider;
+	}
+	
+	@SuppressWarnings("unchecked")
+	public Class<T> forDataType() {
+		return (Class<T>) mapper.itemClass;
+	}
+	
 	private String generateQuestionMarkList(int length) {
 		StringBuilder bld = new StringBuilder("?");
 		for (int i = 1; i < length; i++)
@@ -150,30 +154,24 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 	 * 
 	 * @author markus
 	 *
-	 * @param <Y>
-	 *            object type this dao config is for.
+	 * @param <Y> object type this dao config is for.
 	 */
 	public static class DaoConfig<Y extends Data> {
 		private String tableName;
 		private String[] columnNames;
-		private RowMapper<Y> mapper;
+		private ClubhelperRowMapper<Y> mapper;
 		private String[] orderBy;
 
 		/**
 		 * Defines table structure for this dao
 		 * 
-		 * @param tableName
-		 *            name of the database table
-		 * @param columnNames
-		 *            column names without id and timestamps (added
-		 *            automatically)
-		 * @param mapper
-		 *            maps the object from ResultSet and do a value object.
-		 * @param orderBy
-		 *            column names for ordering list. null for no order clause
+		 * @param tableName   name of the database table
+		 * @param columnNames column names without id and timestamps (added
+		 *                    automatically)
+		 * @param mapper      maps the object from ResultSet and do a value object.
+		 * @param orderBy     column names for ordering list. null for no order clause
 		 */
-		public DaoConfig(String tableName, String[] columnNames,
-				RowMapper<Y> mapper, String[] orderBy) {
+		public DaoConfig(String tableName, String[] columnNames, ClubhelperRowMapper<Y> mapper, String[] orderBy) {
 			super();
 			this.tableName = tableName;
 			this.columnNames = columnNames;
@@ -181,7 +179,7 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 			this.orderBy = orderBy;
 		}
 
-		public RowMapper<Y> getMapper() {
+		public ClubhelperRowMapper<Y> getMapper() {
 			return mapper;
 		}
 	}
@@ -190,23 +188,15 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 	 * Class to map an Object to a value Collection.
 	 * 
 	 * @author markus
-	 * @param <X>
-	 *            Obect type to be mapped
+	 * @param <X> Obect type to be mapped
 	 */
-	public static class RowMapper<X extends Data>
-			implements
-				org.springframework.jdbc.core.RowMapper<X> {
+	public static class ClubhelperRowMapper<X extends Data> implements org.springframework.jdbc.core.RowMapper<X> {
 
 		private Logger log;
 
 		private Class<? extends X> itemClass;
 
-		public static String ID_COLUMN = "id";
-		public static String DELETE_COLUMN = "deleted";
-		public static String CREATED_COLUMN = "created";
-		public static String CHANGED_COLUMN = "changed";
-
-		public RowMapper(Class<? extends X> itemClass) {
+		public ClubhelperRowMapper(Class<? extends X> itemClass) {
 			this.itemClass = itemClass;
 		}
 
@@ -216,12 +206,12 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 
 		@Override
 		public final X mapRow(ResultSet rs, int rowNo) throws SQLException {
-			
+
 			try {
-				return appendDefault(itemClass.newInstance(), rs);
-			} catch (InstantiationException | IllegalAccessException e) {
-				throw new SQLException(
-						"Unable to instanciate " + itemClass.getName(), e);
+				return appendDefault(itemClass.getDeclaredConstructor().newInstance(), rs);
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
+				throw new SQLException("Unable to instanciate " + itemClass.getName(), e);
 			}
 
 		}
@@ -243,38 +233,30 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 				} else {
 					String typeName = meta.getColumnTypeName(i + 1);
 					try {
-						JDBCType type = JDBCType
-								.valueOf(meta.getColumnType(i + 1));
+						JDBCType type = JDBCType.valueOf(meta.getColumnType(i + 1));
 
 						switch (type) {
-							case INTEGER :
-								executeSetter(obj, columnName,
-										Arrays.asList(Long.class, Integer.class,
-												long.class, int.class),
-										rs.getLong(columnName));
-								break;
+						case INTEGER:
+							executeSetter(obj, columnName,
+									Arrays.asList(Long.class, Integer.class, long.class, int.class),
+									rs.getLong(columnName));
+							break;
 
-							case VARCHAR :
-								executeSetter(obj, columnName,
-										Arrays.asList(String.class),
-										rs.getString(columnName));
-								break;
+						case VARCHAR:
+							executeSetter(obj, columnName, Arrays.asList(String.class), rs.getString(columnName));
+							break;
 
-							case DATE :
-							case TIMESTAMP :
-								executeSetter(obj, columnName,
-										Arrays.asList(Date.class,
-												java.sql.Date.class),
-										rs.getTimestamp(columnName));
-								break;
+						case DATE:
+						case TIMESTAMP:
+							executeSetter(obj, columnName, Arrays.asList(Date.class, java.sql.Date.class),
+									rs.getTimestamp(columnName));
+							break;
 
-							default :
-								break;
+						default:
+							break;
 						}
-					} catch (IllegalAccessException | IllegalArgumentException
-							| InvocationTargetException e) {
-						log.error("Unable to set " + columnName + " with type "
-								+ typeName + " on " + obj, e);
+					} catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
+						log.error("Unable to set " + columnName + " with type " + typeName + " on " + obj, e);
 					}
 
 				}
@@ -283,67 +265,55 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 			return obj;
 		}
 
-		private void executeSetter(final X obj, final String columnName,
-				final List<Class<?>> typeClasses, Object value)
-				throws IllegalAccessException, IllegalArgumentException,
-				InvocationTargetException {
+		private void executeSetter(final X obj, final String columnName, final List<Class<?>> typeClasses, Object value)
+				throws IllegalAccessException, InvocationTargetException {
 
-			Predicate<Method> parameterTest = (
-					Method m) -> m.getParameterCount() == 1
-							&& typeClasses.contains(m.getParameterTypes()[0]);
+			Predicate<Method> parameterTest = (Method m) -> m.getParameterCount() == 1
+					&& typeClasses.contains(m.getParameterTypes()[0]);
 
-			Optional<Method> methods = findMethod(obj, columnName, "set",
-					parameterTest);
+			Optional<Method> methods = findMethod(obj, columnName, "set", parameterTest);
 			if (methods.isPresent()) {
 				methods.get().invoke(obj, value);
 			} else {
 				if (log.isWarnEnabled()) {
-					log.warn("Unable to find setter for " + columnName
-							+ " of type " + typeClasses + " for " + obj);
+					log.warn("Unable to find setter for {} of type {} for {}", columnName, typeClasses, obj);
 				}
 			}
 		}
 
-		private Optional<Method> findMethod(final X obj,
-				final String columnName, final String prefix,
+		private Optional<Method> findMethod(final X obj, final String columnName, final String prefix,
 				Predicate<Method> parameterTest) {
 			final String strippedName = columnName.replace("_", "");
-			Optional<Method> methods = Arrays
-					.asList(obj.getClass().getMethods()).stream().filter(m -> {
-						return m.getName().startsWith(prefix)
-								&& parameterTest.test(m)
-								&& m.getName().substring(3)
-										.equalsIgnoreCase(strippedName);
-					}).findFirst();
-			return methods;
+
+			return Arrays
+					.asList(obj.getClass().getMethods()).stream().filter(m -> 
+						m.getName().startsWith(prefix)
+						&& parameterTest.test(m) 
+						&& m.getName().substring(3).equalsIgnoreCase(strippedName))
+					.findFirst();
 		}
+
 		/**
 		 * Maps the given object to a value array.
 		 * 
-		 * @param obj
-		 *            Object to map Values from
+		 * @param obj Object to map Values from
 		 * @return values of the object in correct order of the table columns.
 		 */
 		public Collection<Object> mapObject(X obj, String[] columnNames) {
 			List<Object> result = new ArrayList<>();
 			for (String columnName : columnNames) {
-				Predicate<Method> parameterTest = (
-						Method m) -> m.getParameterCount() == 0;
-				Optional<Method> method = findMethod(obj, columnName, "get",
-						parameterTest);
+				Predicate<Method> parameterTest = (Method m) -> m.getParameterCount() == 0;
+				Optional<Method> method = findMethod(obj, columnName, "get", parameterTest);
 				if (method.isPresent()) {
 					Method m = method.get();
 					try {
 						result.add(m.invoke(obj));
-					} catch (IllegalAccessException | IllegalArgumentException
-							| InvocationTargetException e) {
-						throw new RuntimeException("Unable to execute getter "
-								+ m.getName() + " on " + obj, e);
+					} catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
+						throw new RuntimeException("Unable to execute getter " + m.getName() + " on " + obj, e);
 					}
 				} else {
 					if (log.isWarnEnabled()) {
-						log.warn("Unable to find getter for " + columnName
-								+ " for " + obj);
+						log.warn("Unable to find getter for {} for {}", columnName, obj);
 					}
 				}
 			}
@@ -373,17 +343,13 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 		onDate.set(Calendar.SECOND, 0);
 		onDate.set(Calendar.MINUTE, 0);
 		onDate.set(Calendar.HOUR_OF_DAY, 0);
-		Date time = onDate.getTime();
-		return time;
+		return onDate.getTime();
 	}
 
 	@Override
 	public T getById(long id) {
 		try {
-			T obj = getJdbcTemplate().queryForObject(SQL_QUERY_BY_ID, mapper,
-					id);
-
-			return obj;
+			return getJdbcTemplate().queryForObject(SQL_QUERY_BY_ID, mapper, id);
 		} catch (EmptyResultDataAccessException e) {
 			return null;
 		}
@@ -391,25 +357,27 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 
 	@Override
 	public List<T> getByWhere(String where) {
-		return getJdbcTemplate().query(SQL_QUERY_ALL_WITHDELETED + " WHERE "
-				+ where + " AND deleted is null", mapper);
+		StringBuilder stringBuilder = new StringBuilder();
+		stringBuilder.append(SQL_QUERY_ALL_WITHDELETED);
+		stringBuilder.append(" WHERE ");
+		stringBuilder.append(where);
+		stringBuilder.append(" AND deleted is null");
+		return getJdbcTemplate().query(stringBuilder.toString(), mapper);
 	}
 
 	@Override
 	public List<T> getChangedSince(Date changed) {
-		Object[] args = {changed};
+		Object[] args = { changed };
 		return getJdbcTemplate().query(SQL_QUERY_CHANGED, args, mapper);
 	}
 
 	@Override
 	public T insert(T obj) {
-		Assert.notNull(transactionTemplate,
-				"Transaction Template not set yet.");
+		Assert.notNull(transactionTemplate, "Transaction Template not set yet.");
 
 		boolean withId = obj.getId() != null && obj.getId() >= 0;
 
-		ArrayList<Object> values = new ArrayList<Object>(
-				mapper.mapObject(obj, columnNames));
+		ArrayList<Object> values = new ArrayList<>(mapper.mapObject(obj, columnNames));
 
 		values.add(obj.getChanged());
 		values.add(obj.getCreated());
@@ -432,14 +400,14 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 				if (inserted == 1) {
 					if (!withId) {
 						sql = sqlDialect.queryForIdentity(tableName);
-						Long id = jdbcTemplate.queryForObject(sql, null,
-								Long.class);
+						Long id = jdbcTemplate.queryForObject(sql, null, Long.class);
 						obj.setId(id);
 					}
 				} else {
-					status.setRollbackOnly();
-					throw new IllegalStateException(
-							"insert could not successfully create the database entity");
+					if (status != null) {
+						status.setRollbackOnly();
+					}
+					throw new IllegalStateException("insert could not successfully create the database entity");
 				}
 
 				return obj;
@@ -452,18 +420,16 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 	public boolean update(T obj) {
 
 		Collection<Object> values = mapper.mapObject(obj, columnNames);
+		obj.setChanged(timeProvider.getNow());
 
 		values.add(obj.getChanged());
 		values.add(obj.getId());
 
-		log.debug("sql=" + SQL_UPDATE + "; ValueSize=" + values.size()
-				+ "; Values=" + values);
+		log.debug("sql={}; ValueSize={}; Values={}", SQL_UPDATE, values.size(), values);
 
-		int updateCount = getJdbcTemplate().update(SQL_UPDATE,
-				values.toArray());
+		int updateCount = getJdbcTemplate().update(SQL_UPDATE, values.toArray());
 		if (updateCount != 1) {
-			log.warn("UpdateCount for " + obj + " was " + updateCount
-					+ ". Created: " + obj.getCreated());
+			log.warn("UpdateCount for {} was {}. Created: {}", obj, updateCount, obj.getCreated());
 		}
 
 		return updateCount == 1;
@@ -483,10 +449,9 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 	@Override
 	public boolean delete(long id) {
 
-		Assert.notNull(deletedEntriesDao,
-				"deletedEntriesDao was not initialized.");
+		Assert.notNull(deletedEntriesDao, "deletedEntriesDao was not initialized.");
 
-		Date date = new Date();
+		Date date = timeProvider.getNow();
 		int inserted = getJdbcTemplate().update(SQL_DELETE, date, id);
 		if (inserted == 1) {
 			DeletedEntries deleted = new DeletedEntries(-1L, tableName, id);
@@ -502,8 +467,7 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 	@Override
 	public boolean undelete(long id) {
 
-		Assert.notNull(deletedEntriesDao,
-				"deletedEntriesDao was not initalized.");
+		Assert.notNull(deletedEntriesDao, "deletedEntriesDao was not initalized.");
 		int updated = getJdbcTemplate().update(SQL_DELETE, null, id);
 
 		if (updated == 1) {
@@ -525,6 +489,10 @@ public abstract class AbstractDao<T extends Data> extends JdbcDaoSupport
 	}
 
 	public List<T> getAll(boolean withDeleted) {
-		return getJdbcTemplate().query(SQL_QUERY_ALL, mapper);
+		if (withDeleted) {
+			return getJdbcTemplate().query(SQL_QUERY_ALL_WITHDELETED, mapper);
+		} else {
+			return getJdbcTemplate().query(SQL_QUERY_ALL, mapper);
+		}
 	}
 }
